--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,4 @@
+image: Visual Studio 2017
 build_script:
   - cmd: dotnet restore
   - cmd: dotnet run --project src/Generator.Bind/Generator.Bind.csproj -c:Release
