Fix iOS targetting

--- a/src/osuTK.iOS/osuTK.iOS.csproj
+++ b/src/osuTK.iOS/osuTK.iOS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="MSBuild.Sdk.Extras/1.6.55">
+<Project Sdk="MSBuild.Sdk.Extras">
   <Import Project="..\Common.props" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -7,7 +7,7 @@
     <RootNamespace>osuTK.iOS</RootNamespace>
     <AssemblyName>osuTK.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <TargetFramework>xamarinios10</TargetFramework>
+    <TargetFramework>xamarin.ios</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
