--- a/src/osuTK.iOS/osuTK.iOS.csproj
+++ b/src/osuTK.iOS/osuTK.iOS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="MSBuild.Sdk.Extras">
+<Project Sdk="MSBuild.Sdk.Extras/3.0.23">
   <Import Project="..\Common.props" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
